--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ cellspacing="2">
 <tr>
 <th width="20%"></th>
 <th colspan=4>
-<h1 style="color:white;">ONLINE EBOOKS WEBSITE</h1>
+<h1 style="color:white;">ONLINE EBOOKS WEBSITES AVAILABLE</h1>
 </th>
 </tr>
 </table>
