--- a/Cart.html
+++ b/Cart.html
@@ -1,17 +1,17 @@
+<!-- This is exceptional code -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="./style.css">
-<title>Cart - FBS</title>
+<link rel="stylesheet" href="style.css">
+<title>Cart </title>
 </head>
 <body>
 <div class="wrapper">
 <div class="container">
 <header>
-<table width="100%" align="center" cellpadding="0"
-cellspacing="2">
+<table width="100%" align="center" cellpadding="0" cellspacing="2">
 <tr>
-<th width="20%"></th>
 <th colspan=4>
 <h1 style="color:white;">ONLINE EBOOKS WEBSITE</h1>
 </th>
@@ -19,19 +19,13 @@ cellspacing="2">
 </table>
 </header>
 <nav>
-<table width="100%" align="center" cellpadding="0"
-cellspacing="2">
-<tbody align="center"
-style="font-weight:bold;font-size:18px;"">
+<table width="100%" align="center" cellpadding="0" cellspacing="2">
+<tbody align="center" style="font-weight:bold;font-size:18px;"">
 <tr>
-<td width="20%"><hr><a
-href="Home.html">Home</a><hr></td>
-<td width="20%"><hr><a
-href="Loogin.html">Login</a><hr></td>
-<td width="20%"><hr><a
-href="Register.html">Registration</a><hr></td>
-<td width="20%"><hr><a href="Cart.html"
->Cart</a><hr></td>
+<td width="20%"><hr><a href="index.html">Home</a><hr></td>
+<td width="20%"><hr><a href="Login.html">Login</a><hr></td>
+<td width="20%"><hr><a href="Register.html">Registration</a><hr></td>
+<td width="20%"><hr><a href="Cart.html">Cart</a><hr></td>
 </tr>
 </tbody>
 </table>
@@ -46,25 +40,21 @@ href="Register.html">Registration</a><hr></td>
 <table width="100%" align="center" >
 <tbody>
 <tr>
-<th width="40%"><hr> <vr> BookName></vr><hr></th>
-<th width="20%"><hr>Price<hr></th>
-<th width="20%"><hr>Quantity<hr></th>
-<th width="20%"><hr>Amount<hr></th> </tr>
+<th width="40%"><hr> <vr> Book Name</vr><hr></th>
+<th width="40%"><hr>Actual Price<hr></th>
+<th width="40%"><hr>Quantity<hr></th>
 </tbody>
 <tbody align=center>
 <tr> <td><hr>Java Programming <hr></td>
-<td> <hr>Rs. 2300/- <hr></td>
+<td> <hr>Rs.2300/- <hr></td>
 <td>2</td>
-<td>Rs. 4600/-</td></tr>
 <tr><td> <hr>Web Technologies <hr></td>
-<td>Rs. 3000/-</td>
+<td>Rs.3000/-</td>
 <td>1</td>
-<td>Rs. 3000/-</td></tr>
-<tr><td></td>
-<td><hr><font color="#996600">Total
-Amount:</font><hr></td>
+<tr>
+<td><hr><font color="#996600">Total :</font><hr></td>
+<td><hr>Rs.5300/- <hr></td></td>
 <td><hr>3<hr></td>
-<td><hr>Rs. 7600/-<hr></td> </tr>
 </tbody>
 </table>
 </center>
@@ -72,8 +62,7 @@ Amount:</font><hr></td>
 </div>
 <div class="sidebar2"></div>
 </div>
-<footer><font color="white">(C) 2024 All rights reserved by
-ebooks</font></footer>
+<footer><font color="white">&copy; 2024 All rights reserved by ebooks</font></footer>
 </div>
 </body>
 </html>
