--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="./style.css">
-<title>Home </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
+    
+<link rel="stylesheet" href="style.css">
+<title> Home </title>
 </head>
 <body>
 <div class="wrapper">
 <div class="container">
 <header>
-<table width="100%" align="center" cellpadding="0"
-cellspacing="2">
+<table width="100%" align="center" cellpadding="0" cellspacing="2">
 <tr>
-<th width="20%"></th>
 <th colspan=4>
-<h1 style="color:white;">ONLINE EBOOKS WEBSITES AVAILABLE</h1>
+<h1 style="color:rgb(244, 239, 239);">ONLINE EBOOKS WEBSITE</h1>
 </th>
 </tr>
 </table>
 </header>
 <nav>
-<table width="100%" align="center" cellpadding="0"
-cellspacing="2">
-<tbody align="center"
-style="font-weight:bold;font-size:18px;"">
+<table width="100%" align="center" cellpadding="0" cellspacing="2">
+<tbody align="center" style="font-size:18px;"">
 <tr>
-<td width="20%"><hr><a
-href="Home.html">Home</a><hr></td>
-<td width="20%"><hr><a
-href="Loogin.html">Login</a><hr></td>
-<td width="20%"><hr><a
-href="Register.html">Registration</a><hr></td>
-<td width="20%"><hr><a href="Cart.html"
->Cart</a><hr></td>
+<td width="20%"><hr><a href="index.html">Home</a><hr></td>
+<td width="20%"><hr><a href="Login.html">Login</a><hr></td>
+<td width="20%"><hr><a href="Register.html">Registration</a><hr></td>
+<td width="20%"><hr><a href="Cart.html">Cart</a><hr></td>
 </tr>
 </tbody>
 </table>
@@ -42,21 +39,18 @@ href="Register.html">Registration</a><hr></td>
 <div class="container2">
 <main>
 <center>
-<h2>Welcome to FBS e-Book's Website</h2>
-<p>Shopping at <font size=5></font> can be both
-<font size=5>fun</font>
-and <font size=5>savings</font>.</br>Shop with
-us in this special <font
-size=5>discount</font> season and save upto
-<font size=5>90%</font> on all your
-purchases.</br></p>
-<br/><br/><br/><br/><br/><br/><br/><br/>
+<h2>Welcome to ONLINE e-Book's Website</h2>
+<!-- Check out books available in the website <br> that may/may not reach ur expectation </br>
+But u wil enjoy it -->
+<p>Website is under implementation <br>
+    just checkout the Login and Registration pages
+</p>
+<br/><br/><br/><br><br>
 </main>
 </div>
 <div class="sidebar2"></div>
 </div>
-<footer><font color="white">(C) 2024 All rights reserved by
-ebooks</font></footer>
+<footer><font color="white">&copy; 2024 All rights reserved by ebooks</font></footer>
 </div>
 </body>
-</html
+</html>
